# ecommerce-platform

./: .dockerignore  .gitignore  Readme.md  docker-compose.yaml  ecommerce-platform.code-workspace
services/catalogue/: .env.example  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  wait_for_db.py
services/catalogue/api/routers/: catalogue_route.py
services/catalogue/data/: breaker.py  database.py  models.py  redis.py
services/catalogue/handlers/: catalogue_handler.py  order_handler.py
services/catalogue/migrations/: env.py
services/catalogue/migrations/versions/: 0409e3099714_create_orders_table.py  078e08b77466_update_decrement_inventory_function.py  0ccd343f731e_add_inventory_trigger.py  5cbbed5cdb57_add_orders_table_constraint.py  (+6 more)
services/catalogue/nginx/: nginx.conf
services/catalogue/routers/: catalogue_route.py  order_route.py
services/catalogue/schema/: catalogue_schema.py  order_schema.py
services/catalogue/scripts/: cache_miss_simulation.py  contention_script.py  load_balancer_concurrent.sh  loadbalancer_test.sh  populate_catalogue.py  rabbitmq_check_queue.py  rabbitmq_producer.py  rabbitmq_worker.py  run_test.sh  wait_for_db.py
services/catalogue/utils/: config.py
services/order/: .env.example  main.py  pyproject.toml
services/order/data/: database.py  models.py
services/order/handlers/: catalogue_client.py  order_handler.py
services/order/migrations/: env.py
services/order/routers/: order_route.py
services/order/scripts/: pywt_encode_decode.py  redis_health_check.py
services/order/utils/: config.py
(+37 files in other folders)
