[project]
name = "catalogue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "orjson>=3.11.9",
    "passlib>=1.7.4",
    "pika>=1.4.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
