[project]
name = "order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
